# BetterCppShot

./: .gitignore  CMakeLists.txt  Makefile  README.md  changelog.txt  compile.bat
res/: resources.rc.in
src/: Utils.cpp  Utils.h  main.cpp  version.h
src/images/: CompositeScreenshot.cpp  Screenshot.cpp  Screenshot.h
src/managers/: Application.cpp  Application.h
src/ui/: Button.cpp  Button.h  Node.cpp  Node.h
src/windows/: BackdropWindow.cpp  BackdropWindow.h  MainWindow.cpp  MainWindow.h  Window.cpp  Window.h
